Add comprehensive development guide for D&D MCP Server (FastMCP 2.9.0+)
- Introduced a detailed markdown document covering project structure, architecture, tool implementation patterns, storage layer, data models, development workflows, testing, debugging, deployment, code style, and performance considerations.
- Included examples and best practices for using FastMCP, enhancing developer experience and ensuring consistency across tools.
- Documented all relevant data models and their attributes to facilitate understanding and usage.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,12 +9,12 @@ repos:
       - id: check-merge-conflict
       - id: debug-statements
 
-  - repo: https://github.com/psf/black
-    rev: 23.3.0
+  - repo: https://github.com/astral-sh/uv-pre-commit
+    # uv version.
+    rev: 0.7.16
     hooks:
-      - id: black
-        language_version: python3
-        args: [--line-length=88]
+      - id: uv-lock
+      - id: uv-export
 
   - repo: https://github.com/charliermarsh/ruff-pre-commit
     rev: v0.0.270
