--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,25 +1,28 @@
 [build-system]
-requires = ["setuptools>=61.0", "wheel"]
+requires = ["setuptools>=77.0.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "gamemaster-mcp"
 version = "1.0.0"
 description = "A comprehensive D&D campaign management MCP server built with FastMCP 2.8.0+"
-authors = [{name = "Your Name", email = "your.email@example.com"}]
-license = {text = "MIT"}
+authors = [{name = "Joel Casimir", email = "y9agf5y5@anonaddy.me"}]
+license = "MIT"
+license-files = ["LICEN[CS]E*"]
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.12"
 dependencies = [
-    "fastmcp>=2.8.0",
+    "fastmcp>=2.9.0",
     "pydantic>=2.0.0",
+    "python-dotenv>=1.1.1",
     "typing-extensions>=4.0.0",
 ]
+[project.urls]
+Homepage = "https://github.com/study-flamingo/gamemaster-mcp"
 
 [project.optional-dependencies]
 dev = [
     "pytest>=7.0.0",
-    "black>=23.0.0",
     "ruff>=0.1.0",
     "mypy>=1.0.0",
     "pre-commit>=3.0.0",
@@ -35,17 +38,16 @@ where = ["src"]
 "" = "src"
 
 [tool.ruff]
-target-version = "py310"
-line-length = 88
+target-version = "py312"
+line-length = 100
 select = ["E", "F", "I", "N", "W"]
-ignore = ["E501"]
-
-[tool.black]
-target-version = ["py310"]
-line-length = 88
+ignore = [
+    "E501",
+    "F403",
+]
 
 [tool.mypy]
-python_version = "3.10"
+python_version = "3.12"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
