Enhance D&D MCP Server with improved data handling and documentation updates
- Updated .markdownlint.jsonc for better markdown linting rules.
- Added CORE PROJECT RULES section to DEVELOPMENT.md for clearer guidelines, primarily change tracking
- Expanded README.md with a recommended system prompt for optimal performance.
- Modified main.py to handle environment variables more robustly and updated campaign setting type.
- Adjusted models.py to allow campaign settings as file paths.
- Refined storage.py to streamline data directory handling.

--- a/.markdownlint.jsonc
+++ b/.markdownlint.jsonc
@@ -8,5 +8,6 @@
     },
     "MD025": false,
   // MD013/line-length : Line length : https://github.com/DavidAnson/markdownlint/blob/v0.38.0/doc/md013.md
-    "MD032": false
+    "MD032": false,
+    "MD007": false
 }
